--- a/src/app/example-drawer-content/example-components/buttons/buttons.component.scss
+++ b/src/app/example-drawer-content/example-components/buttons/buttons.component.scss
@@ -1,4 +1,5 @@
+@import 'src/utils.scss';
+
 :host {
-  width: 100%;
-  justify-content: space-between;
+  @include space-and-center;
 }
