--- a/src/app/example-header/example-header.component.scss
+++ b/src/app/example-header/example-header.component.scss
@@ -20,4 +20,8 @@
     width: auto;
     margin-right: 10px;
   }
+
+  .spacer {
+    width: 10px;
+  }
 }
